--- a/Backend/carrent/src/main/resources/application.properties
+++ b/Backend/carrent/src/main/resources/application.properties
@@ -5,8 +5,12 @@ spring.datasource.password=qwerty
 spring.jpa.show-sql=true
 spring.datasource.tomcat.password=qwerty
 spring.jpa.properties.hibernate.format_sql=true
-logging.file.name=app.log
-spring.web.cors.allow-credentials=true
-spring.web.cors.allowed-origins=http://localhost:4200
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+# logging.file.name=app.log
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# spring.web.cors.allow-credentials=true
+# spring.web.cors.allowed-origins=http://localhost:4200
+# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# spring.web.cors.allowed-headers=*
