general backend communication

--- a/Backend/carrent/src/main/resources/application.properties
+++ b/Backend/carrent/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=carrent
 spring.datasource.url=jdbc:postgresql://localhost:5432/CarRental
 spring.datasource.username=postgres
-spring.datasource.password=qwerty
+spring.datasource.password=przemek123
 spring.jpa.show-sql=true
-spring.datasource.tomcat.password=qwerty
+spring.datasource.tomcat.password=przemek123
 spring.jpa.properties.hibernate.format_sql=true
 # logging.file.name=app.log
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# spring.web.cors.allow-credentials=true
-# spring.web.cors.allowed-origins=http://localhost:4200
-# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-# spring.web.cors.allowed-headers=*
+ spring.web.cors.allow-credentials=true
+ spring.web.cors.allowed-origins=http://localhost:4200
+ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+ spring.web.cors.allowed-headers=*
