--- a/Backend/carrent/src/main/resources/application.properties
+++ b/Backend/carrent/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=carrent
 spring.datasource.url=jdbc:postgresql://localhost:5432/CarRental
 spring.datasource.username=postgres
-spring.datasource.password=przemek123
+spring.datasource.password=qwerty
 spring.jpa.show-sql=true
-spring.datasource.tomcat.password=przemek123
+spring.datasource.tomcat.password=qwerty
 spring.jpa.properties.hibernate.format_sql=true
 # logging.file.name=app.log
 spring.datasource.driver-class-name=org.postgresql.Driver
