--- a/Backend/carrent/src/main/resources/application.properties
+++ b/Backend/carrent/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
- spring.web.cors.allow-credentials=true
- spring.web.cors.allowed-origins=http://localhost:4200
- spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
- spring.web.cors.allowed-headers=*
+ #spring.web.cors.allow-credentials=true
+ #spring.web.cors.allowed-origins=http://localhost:4200
+ #spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+ #spring.web.cors.allowed-headers=*
